@@ -1,3 +1,7 @@
+2019-05-04 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Combine consecutive Unicode powers in one power
+
 2019-05-03 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Support for Unicode fractions
